[package]
name = "crab_era"
version = "0.1.0"

description = "Computes time relative to the Crab Epoch (the commit of Rust 1.0, a59de37e)"
edition = "2021"
keywords = ["crab"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/ReactorScram/crab_era"

[dependencies]
chrono = "0.4.19"
